examples/neg/multiline_extern_definition.effekt
extern def jsPrintThree(): Unit = js """
  console.log(3)
"

def main() = jsPrintThree()
